# realestate-dash

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
data/: apartment_news.json  news_headlines.json  search_trend.json
pages/: 1_📈_전세가율_분석.py  2_📉_매매전세_추이.py  3_📰_부동산_뉴스.py  4_📊_거래량_분석.py
utils/: bq_client.py
workflow/: collect_apartment_news.py  collect_news.py
